fixing styling to- stop delete button overlapping text on todos change new/edit dataforms to show description as comment restricted input on description made new/edit containers centered in page fixed some text spacing changed some selectors

--- a/homepage/src/styles.css
+++ b/homepage/src/styles.css
@@ -69,7 +69,7 @@ div {
     padding: 16px;
 }
 
-.banner {
+#banner {
     position: relative;
     text-align: center;
 }
@@ -87,6 +87,16 @@ div {
     margin-right: 20px;
 }
 
+.todo-content-box {
+    border-style: solid;
+    border-width: medium;
+    background-color: #EEE;
+    border-radius: 8px;
+    padding: 16px;
+    position: relative;
+    margin-bottom: 16px;
+}
+
 .content-box {
     border-style: solid;
     border-width: medium;
@@ -94,17 +104,28 @@ div {
     border-radius: 8px;
     padding: 16px;
     position: relative;
-    max-width:px;
     margin-bottom: 16px;
+    left: 33%;
+    right: 33%;
+    max-width: 33%;
+}
+
+#button-delete{
+    padding:9px
 }
 
 .buttons-container {
     position: absolute;
     right: 0px;
     bottom: 0px;
-    padding: 16px;
+    padding: 9px;
 }
 
 .buttons-container > button {
     margin-left: 8px;
+}
+
+#description-label{
+    display: block;
+    float: left;
 }
